{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 51,
  "lineage": "fd159900-29c2-744b-b4d5-e4a0e7aa72d2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b0701366eaa11d6",
            "arn": "arn:aws:ec2:us-east-1:590184141824:elastic-ip/eipalloc-02b0701366eaa11d6",
            "association_id": "eipassoc-0ec572aa3184ae459",
            "domain": "vpc",
            "id": "eipalloc-02b0701366eaa11d6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0619640b100b548fe",
            "private_dns": "ip-10-0-1-158.ec2.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-52-71-17-27.compute-1.amazonaws.com",
            "public_ip": "52.71.17.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:internet-gateway/igw-0ba5f6e44a4d223d0",
            "id": "igw-0ba5f6e44a4d223d0",
            "owner_id": "590184141824",
            "tags": {
              "Name": "my_vpc_igw"
            },
            "tags_all": {
              "Name": "my_vpc_igw"
            },
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b0701366eaa11d6",
            "association_id": "eipassoc-0ec572aa3184ae459",
            "connectivity_type": "public",
            "id": "nat-049b6a8b4a7b6dcf5",
            "network_interface_id": "eni-0619640b100b548fe",
            "private_ip": "10.0.1.158",
            "public_ip": "52.71.17.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e505e739c70f56f1",
            "tags": {
              "Name": "my_vpc_nat_gw"
            },
            "tags_all": {
              "Name": "my_vpc_nat_gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:route-table/rtb-0ac4fb00311b8cce1",
            "id": "rtb-0ac4fb00311b8cce1",
            "owner_id": "590184141824",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-049b6a8b4a7b6dcf5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_vpc_private_route_table"
            },
            "tags_all": {
              "Name": "my_vpc_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:route-table/rtb-04a3b51910ac75f3b",
            "id": "rtb-04a3b51910ac75f3b",
            "owner_id": "590184141824",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba5f6e44a4d223d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_vpc_public_route_table"
            },
            "tags_all": {
              "Name": "my_vpc_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004b5b665902383d1",
            "route_table_id": "rtb-0ac4fb00311b8cce1",
            "subnet_id": "subnet-0a57e2fc17d8930f4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086503ce205776dc0",
            "route_table_id": "rtb-0ac4fb00311b8cce1",
            "subnet_id": "subnet-0076f4b61afac38a9"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0551c454e502cf6bf",
            "route_table_id": "rtb-04a3b51910ac75f3b",
            "subnet_id": "subnet-0e505e739c70f56f1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f0221a45e0a46c1",
            "route_table_id": "rtb-04a3b51910ac75f3b",
            "subnet_id": "subnet-033b4ddf837587bee"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:security-group/sg-0fdd38a90996dc228",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdd38a90996dc228",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20241021221946499400000001",
            "name_prefix": "terraform-",
            "owner_id": "590184141824",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_security_group"
            },
            "tags_all": {
              "Name": "my_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2737290333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fdd38a90996dc228",
            "security_group_rule_id": "sgr-088cdbe40b358369c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.secgroup",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1234242181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd38a90996dc228",
            "security_group_rule_id": "sgr-06a0977442cd7f9da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.secgroup",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "3001",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3001,
            "id": "sgrule-1704164864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd38a90996dc228",
            "security_group_rule_id": "sgr-0f221658db714448b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.secgroup",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "3306",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1200788545",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd38a90996dc228",
            "security_group_rule_id": "sgr-03657287cd8052965",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.secgroup",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4279981872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd38a90996dc228",
            "security_group_rule_id": "sgr-00ad7b5e73b7c01ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.secgroup",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "9000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1140464458",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdd38a90996dc228",
            "security_group_rule_id": "sgr-04a7c3b2966eea895",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.secgroup",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:subnet/subnet-0a57e2fc17d8930f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a57e2fc17d8930f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184141824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_vpc_private_subnet_1"
            },
            "tags_all": {
              "Name": "my_vpc_private_subnet_1"
            },
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:subnet/subnet-0076f4b61afac38a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0076f4b61afac38a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184141824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_vpc_private_subnet_2"
            },
            "tags_all": {
              "Name": "my_vpc_private_subnet_2"
            },
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:subnet/subnet-0e505e739c70f56f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e505e739c70f56f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184141824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_vpc_public_subnet_1"
            },
            "tags_all": {
              "Name": "my_vpc_public_subnet_1"
            },
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:subnet/subnet-033b4ddf837587bee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033b4ddf837587bee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184141824",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_vpc_public_subnet_2"
            },
            "tags_all": {
              "Name": "my_vpc_public_subnet_2"
            },
            "vpc_id": "vpc-0258268e3c7ee3866"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184141824:vpc/vpc-0258268e3c7ee3866",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0224073270bac3021",
            "default_route_table_id": "rtb-0875feb7cc507de6e",
            "default_security_group_id": "sg-0ab550754e9e174d1",
            "dhcp_options_id": "dopt-093f7727925b121d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0258268e3c7ee3866",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0875feb7cc507de6e",
            "owner_id": "590184141824",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}